<resources>
    <string name="app_name">MyLife</string>

    <string name="location_title">Location</string>
    <string name="location_text">%1$s</string>
    <string name="lat_lon_text">(%1$.4f,%2$.4f)</string>

    <string name="weather_title">Weather</string>
    <string name="weather_now_fmt">%1$s | Temp:%2$d℃ | Wind:%3$d° %4$.2fkm/s </string>
    <string name="weather_day_fmt">%1$s | Temp:%2$d-%3$d ℃ | Wind:%4$d° %5$.2fkm/s</string>

    <string name="event_pinned_error">Add calendar event failed</string>

    <!--
    0 tornado
    1 tropical storm
    2 hurricane
    3 severe thunderstorms
    4 thunderstorms
    5 mixed rain and snow
    6 mixed rain and sleet
    7 mixed snow and sleet
    8 freezing drizzle
    9 drizzle
    10 freezing rain
    11 showers
    12 showers
    13 snow flurries
    14 light snow showers
    15 blowing snow
    16 snow
    17 hail
    18 sleet
    19 dust
    20 foggy
    21 haze
    22 smoky
    23 blustery
    24 windy
    25 cold
    26 cloudy
    27 mostly cloudy (night)
    28 mostly cloudy (day)
    29 partly cloudy (night)
    30 partly cloudy (day)
    31 clear (night)
    32 sunny
    33 fair (night)
    34 fair (day)
    35 mixed rain and hail
    36 hot
    37 isolated thunderstorms
    38 scattered thunderstorms
    39 scattered thunderstorms
    40 scattered showers
    41 heavy snow
    42 scattered snow showers
    43 heavy snow
    44 partly cloudy
    45 thundershowers
    46 snow showers
    47 isolated thundershowers
    3200 not available
    -->
    <string name="code_0">tornado</string>
    <string name="code_1">tropical storm</string>
    <string name="code_2">hurricane</string>
    <string name="code_3">severe thunderstorms</string>
    <string name="code_4">thunderstorms</string>
    <string name="code_5">mixed rain and snow</string>
    <string name="code_6">mixed rain and sleet</string>
    <string name="code_7">mixed snow and sleet</string>
    <string name="code_8">freezing drizzle</string>
    <string name="code_9">drizzle</string>
    <string name="code_10">freezing rain</string>
    <string name="code_11">showers</string>
    <string name="code_12">showers</string>
    <string name="code_13">snow flurries</string>
    <string name="code_14">light snow showers</string>
    <string name="code_15">blowing snow</string>
    <string name="code_16">snow</string>
    <string name="code_17">hail</string>
    <string name="code_18">sleet</string>
    <string name="code_19">dust</string>
    <string name="code_20">foggy</string>
    <string name="code_21">haze</string>
    <string name="code_22">smoky</string>
    <string name="code_23">blustery</string>
    <string name="code_24">windy</string>
    <string name="code_25">cold</string>
    <string name="code_26">cloudy</string>
    <string name="code_27">mostly cloudy (night)</string>
    <string name="code_28">mostly cloudy (day)</string>
    <string name="code_29">partly cloudy (night)</string>
    <string name="code_30">partly cloudy (day)</string>
    <string name="code_31">clear (night)</string>
    <string name="code_32">sunny</string>
    <string name="code_33">fair (night)</string>
    <string name="code_34">fair (day)</string>
    <string name="code_35">mixed rain and hail</string>
    <string name="code_36">hot</string>
    <string name="code_37">isolated thunderstorms</string>
    <string name="code_38">scattered thunderstorms</string>
    <string name="code_39">scattered thunderstorms</string>
    <string name="code_40">scattered showers</string>
    <string name="code_41">heavy snow</string>
    <string name="code_42">scattered snow showers</string>
    <string name="code_43">heavy snow</string>
    <string name="code_44">partly cloudy</string>
    <string name="code_45">thundershowers</string>
    <string name="code_46">snow showers</string>
    <string name="code_47">isolated thundershowers</string>
    <string name="code_3200">not available</string>
</resources>
